fixed metrics cards alignment

--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -127,6 +127,11 @@
 	text-align: center;
 	margin-top: 30px;
 }
+
+.heroContentContainer {
+
+}
+
 /* 
 .heroContent > div {
   margin: 0;
