--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -38,7 +38,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-evenly;
-	flex-wrap: wrap;
+	flex-wrap: wrap-reverse;
 	width: 100%;
 	/* max-height: 125px; */
 	/* padding-top: 11px; */
@@ -53,7 +53,7 @@
 	color: inherit;
 	text-decoration: none;
 	border-radius: 10px;
-	max-width: 380px;
+	width: 380px;
 	max-height: 108px;
 }
 
